code25_all/scala/3422336.txt
class Bar {
    def foo[A](xs: A*) { xs.foreach(println) }
    def foo[A, B](xs: (A, B)*) { xs.foreach(x => println(x._1 + " - " + x._2)) }
}   

<console>:7: error: double definition:
method foo:[A,B](xs: (A, B)*)Unit and
method foo:[A](xs: A*)Unit at line 6
have same type after erasure: (xs: Seq)Unit
        def foo[A,B](xs: (A, B)*) { xs.foreach(x => println(x._1 + " - " + x._2)
) }
            ^

bar.foo(1, 2, 3)
bar.foo(1 -> 2, 3 -> 4)

bar.fooInts(1, 2, 3)
bar.fooPairs(1 -> 2, 3 -> 4)

